[project]
name = "y25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "common",
    "d1",
]

[project.scripts]
y25 = "y25:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "common",
    "days/*",
]

[tool.uv.sources]
common = { workspace = true }
d1 = { workspace = true }
