[project]
name = "y25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "common",
    "d1",
    "d2",
    "d3",
    "d4",
    "d5",
    "d6",
    "d7",
]

[project.scripts]
y25 = "y25:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "common",
    "days/*",
]

[tool.uv.sources]
common = { workspace = true }
d1 = { workspace = true }
d2 = { workspace = true }
d3 = { workspace = true }
d4 = { workspace = true }
d5 = { workspace = true }
d6 = { workspace = true }
d7 = { workspace = true }
